# dxos

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: demo-mock.sh  demo.cast  demo.tape  fake-dxos-v2.sh  fake-dxos.sh  record-demo.sh  record-final.sh  record-real.sh  record-v2.sh
crates/api/: Cargo.toml
crates/api/src/: anthropic.rs  lib.rs  ollama.rs  provider.rs
crates/brain/: Cargo.toml
crates/brain/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  types.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: lib.rs
crates/fleet/: Cargo.toml
crates/fleet/src/: lib.rs
crates/harness/: Cargo.toml
crates/harness/src/: compact.rs  lib.rs  permissions.rs  runtime.rs  tests.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  edit.rs  file_read.rs  file_write.rs  glob_search.rs  grep_search.rs  lib.rs  registry.rs  repo_map.rs  tests.rs  web_fetch.rs
docs/: index.html
dxos-cli/: Cargo.toml
dxos-cli/src/: display.rs  main.rs  models.rs  prompt.rs  repl.rs  setup.rs
