[workspace]
members = ["crates/*", "dxos-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pdaxt/dxos"
description = "The open-source AI agent operating system. One binary. Any model."

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }

# File ops (ripgrep internals)
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
glob = "0.3"
walkdir = "2"

# Terminal
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.30"

# Persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
dirs = "6"
rustyline = "15"

# Git
git2 = "0.19"

# Tree-sitter
tree-sitter = "0.24"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
