[package]
name = "dxos-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Real-time TUI dashboard for agent monitoring"

[lints]
workspace = true

[dependencies]
dxos-core = { path = "../core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
