[package]
name = "dxos-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent conversation runtime — turn loop, permissions, session compaction"

[lints]
workspace = true

[dependencies]
dxos-core = { path = "../core" }
dxos-tools = { path = "../tools" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
