[package]
name = "dxos-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Rust tool implementations — file ops, grep, glob, shell"

[lints]
workspace = true

[dependencies]
dxos-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
ignore = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
